--- a/MediaBrowser.Server.Implementations/Localization/Core/id.json
+++ b/MediaBrowser.Server.Implementations/Localization/Core/id.json
@@ -16,16 +16,16 @@
     "HeaderPeople": "People",
     "ValueSpecialEpisodeName": "Special - {0}",
     "LabelChapterName": "Chapter {0}",
-    "NameSeasonNumber": "Series {0}",
-    "LabelExit": "Exit",
-    "LabelVisitCommunity": "Visit Community",
+    "NameSeasonNumber": "Season {0}",
+    "LabelExit": "Keluar",
+    "LabelVisitCommunity": "Kunjungi Komunitas",
     "LabelGithub": "Github",
-    "LabelApiDocumentation": "Api Documentation",
-    "LabelDeveloperResources": "Developer Resources",
-    "LabelBrowseLibrary": "Browse Library",
-    "LabelConfigureServer": "Configure Emby",
-    "LabelRestartServer": "Restart Server",
-    "CategorySync": "Sync",
+    "LabelApiDocumentation": "Dokumentasi Api",
+    "LabelDeveloperResources": "Sumber daya Pengembang",
+    "LabelBrowseLibrary": "Telusuri Pustaka",
+    "LabelConfigureServer": "Konfigurasi Emby",
+    "LabelRestartServer": "Hidupkan ulang Server",
+    "CategorySync": "Singkron",
     "CategoryUser": "User",
     "CategorySystem": "System",
     "CategoryApplication": "Application",
@@ -45,7 +45,7 @@
     "NotificationOptionTaskFailed": "Scheduled task failure",
     "NotificationOptionInstallationFailed": "Installation failure",
     "NotificationOptionNewLibraryContent": "New content added",
-    "NotificationOptionNewLibraryContentMultiple": "New (multiple) content added",
+    "NotificationOptionNewLibraryContentMultiple": "New content added (multiple)",
     "NotificationOptionCameraImageUploaded": "Camera image uploaded",
     "NotificationOptionUserLockedOut": "User locked out",
     "NotificationOptionServerRestartRequired": "Server restart required",
@@ -59,10 +59,10 @@
     "ViewTypeBoxSets": "Collections",
     "ViewTypeChannels": "Channels",
     "ViewTypeLiveTV": "Live TV",
-    "ViewTypeLiveTvNowPlaying": "Now Showing",
+    "ViewTypeLiveTvNowPlaying": "Now Airing",
     "ViewTypeLatestGames": "Latest Games",
     "ViewTypeRecentlyPlayedGames": "Recently Played",
-    "ViewTypeGameFavorites": "Favourites",
+    "ViewTypeGameFavorites": "Favorites",
     "ViewTypeGameSystems": "Game Systems",
     "ViewTypeGameGenres": "Genres",
     "ViewTypeTvResume": "Resume",
@@ -70,13 +70,13 @@
     "ViewTypeTvLatest": "Latest",
     "ViewTypeTvShowSeries": "Series",
     "ViewTypeTvGenres": "Genres",
-    "ViewTypeTvFavoriteSeries": "Favourite Series",
-    "ViewTypeTvFavoriteEpisodes": "Favourite Episodes",
+    "ViewTypeTvFavoriteSeries": "Favorite Series",
+    "ViewTypeTvFavoriteEpisodes": "Favorite Episodes",
     "ViewTypeMovieResume": "Resume",
     "ViewTypeMovieLatest": "Latest",
     "ViewTypeMovieMovies": "Movies",
     "ViewTypeMovieCollections": "Collections",
-    "ViewTypeMovieFavorites": "Favourites",
+    "ViewTypeMovieFavorites": "Favorites",
     "ViewTypeMovieGenres": "Genres",
     "ViewTypeMusicLatest": "Latest",
     "ViewTypeMusicPlaylists": "Playlists",
@@ -84,10 +84,10 @@
     "ViewTypeMusicAlbumArtists": "Album Artists",
     "HeaderOtherDisplaySettings": "Display Settings",
     "ViewTypeMusicSongs": "Songs",
-    "ViewTypeMusicFavorites": "Favourites",
-    "ViewTypeMusicFavoriteAlbums": "Favourite Albums",
-    "ViewTypeMusicFavoriteArtists": "Favourite Artists",
-    "ViewTypeMusicFavoriteSongs": "Favourite Songs",
+    "ViewTypeMusicFavorites": "Favorites",
+    "ViewTypeMusicFavoriteAlbums": "Favorite Albums",
+    "ViewTypeMusicFavoriteArtists": "Favorite Artists",
+    "ViewTypeMusicFavoriteSongs": "Favorite Songs",
     "ViewTypeFolders": "Folders",
     "ViewTypeLiveTvRecordingGroups": "Recordings",
     "ViewTypeLiveTvChannels": "Channels",
