--- a/MediaBrowser.Server.Implementations/Localization/Core/hu.json
+++ b/MediaBrowser.Server.Implementations/Localization/Core/hu.json
@@ -15,7 +15,7 @@
     "HeaderCastCrew": "Cast & Crew",
     "HeaderPeople": "People",
     "ValueSpecialEpisodeName": "Special - {0}",
-    "LabelChapterName": "Chapter {0}",
+    "LabelChapterName": "Fejezet {0}",
     "NameSeasonNumber": "Season {0}",
     "LabelExit": "Kil\u00e9p\u00e9s",
     "LabelVisitCommunity": "K\u00f6z\u00f6ss\u00e9g",
@@ -27,10 +27,10 @@
     "LabelRestartServer": "Szerver \u00fajraindit\u00e1sa",
     "CategorySync": "Sync",
     "CategoryUser": "User",
-    "CategorySystem": "System",
-    "CategoryApplication": "Application",
-    "CategoryPlugin": "Plugin",
-    "NotificationOptionPluginError": "Plugin failure",
+    "CategorySystem": "Rendszer",
+    "CategoryApplication": "Alkalmaz\u00e1s",
+    "CategoryPlugin": "Be\u00e9p\u00fcl\u0151",
+    "NotificationOptionPluginError": "Be\u00e9p\u00fcl\u0151 hiba",
     "NotificationOptionApplicationUpdateAvailable": "Application update available",
     "NotificationOptionApplicationUpdateInstalled": "Application update installed",
     "NotificationOptionPluginUpdateInstalled": "Plugin update installed",
@@ -48,60 +48,60 @@
     "NotificationOptionNewLibraryContentMultiple": "New content added (multiple)",
     "NotificationOptionCameraImageUploaded": "Camera image uploaded",
     "NotificationOptionUserLockedOut": "User locked out",
-    "NotificationOptionServerRestartRequired": "Server restart required",
-    "ViewTypePlaylists": "Playlists",
-    "ViewTypeMovies": "Movies",
+    "NotificationOptionServerRestartRequired": "\u00dajraind\u00edt\u00e1s sz\u00fcks\u00e9ges",
+    "ViewTypePlaylists": "Lej\u00e1tsz\u00e1si list\u00e1k",
+    "ViewTypeMovies": "Filmek",
     "ViewTypeTvShows": "TV",
-    "ViewTypeGames": "Games",
-    "ViewTypeMusic": "Music",
-    "ViewTypeMusicGenres": "Genres",
-    "ViewTypeMusicArtists": "Artists",
-    "ViewTypeBoxSets": "Collections",
-    "ViewTypeChannels": "Channels",
-    "ViewTypeLiveTV": "Live TV",
-    "ViewTypeLiveTvNowPlaying": "Now Airing",
-    "ViewTypeLatestGames": "Latest Games",
-    "ViewTypeRecentlyPlayedGames": "Recently Played",
-    "ViewTypeGameFavorites": "Favorites",
+    "ViewTypeGames": "J\u00e1t\u00e9kok",
+    "ViewTypeMusic": "Zene",
+    "ViewTypeMusicGenres": "M\u0171fajok",
+    "ViewTypeMusicArtists": "M\u0171v\u00e9szek",
+    "ViewTypeBoxSets": "Gy\u0171jtem\u00e9nyek",
+    "ViewTypeChannels": "Csatorn\u00e1k",
+    "ViewTypeLiveTV": "\u00c9l\u0151 TV",
+    "ViewTypeLiveTvNowPlaying": "Most J\u00e1tszott",
+    "ViewTypeLatestGames": "Leg\u00fajabb J\u00e1t\u00e9kok",
+    "ViewTypeRecentlyPlayedGames": "Legut\u00f3bb J\u00e1tszott",
+    "ViewTypeGameFavorites": "Kedvencek",
     "ViewTypeGameSystems": "Game Systems",
-    "ViewTypeGameGenres": "Genres",
-    "ViewTypeTvResume": "Resume",
-    "ViewTypeTvNextUp": "Next Up",
-    "ViewTypeTvLatest": "Latest",
-    "ViewTypeTvShowSeries": "Series",
-    "ViewTypeTvGenres": "Genres",
-    "ViewTypeTvFavoriteSeries": "Favorite Series",
-    "ViewTypeTvFavoriteEpisodes": "Favorite Episodes",
-    "ViewTypeMovieResume": "Resume",
-    "ViewTypeMovieLatest": "Latest",
-    "ViewTypeMovieMovies": "Movies",
-    "ViewTypeMovieCollections": "Collections",
-    "ViewTypeMovieFavorites": "Favorites",
-    "ViewTypeMovieGenres": "Genres",
-    "ViewTypeMusicLatest": "Latest",
+    "ViewTypeGameGenres": "M\u0171fajok",
+    "ViewTypeTvResume": "Folytat\u00e1s",
+    "ViewTypeTvNextUp": "K\u00f6vetkez\u0151",
+    "ViewTypeTvLatest": "Leg\u00fajabb",
+    "ViewTypeTvShowSeries": "Sorozat",
+    "ViewTypeTvGenres": "M\u0171fajok",
+    "ViewTypeTvFavoriteSeries": "Kedvenc Sorozat",
+    "ViewTypeTvFavoriteEpisodes": "Kedvenc R\u00e9szek",
+    "ViewTypeMovieResume": "Folytat\u00e1s",
+    "ViewTypeMovieLatest": "Leg\u00fajabb",
+    "ViewTypeMovieMovies": "Filmek",
+    "ViewTypeMovieCollections": "Gy\u0171jtem\u00e9nyek",
+    "ViewTypeMovieFavorites": "Kedvencek",
+    "ViewTypeMovieGenres": "M\u0171fajok",
+    "ViewTypeMusicLatest": "Leg\u00fajabb",
     "ViewTypeMusicPlaylists": "Playlists",
-    "ViewTypeMusicAlbums": "Albums",
-    "ViewTypeMusicAlbumArtists": "Album Artists",
-    "HeaderOtherDisplaySettings": "Display Settings",
-    "ViewTypeMusicSongs": "Songs",
-    "ViewTypeMusicFavorites": "Favorites",
-    "ViewTypeMusicFavoriteAlbums": "Favorite Albums",
-    "ViewTypeMusicFavoriteArtists": "Favorite Artists",
-    "ViewTypeMusicFavoriteSongs": "Favorite Songs",
+    "ViewTypeMusicAlbums": "Albumok",
+    "ViewTypeMusicAlbumArtists": "Album El\u0151ad\u00f3k",
+    "HeaderOtherDisplaySettings": "Megjelen\u00edt\u00e9si Be\u00e1ll\u00edt\u00e1sok",
+    "ViewTypeMusicSongs": "Dalok",
+    "ViewTypeMusicFavorites": "Kedvencek",
+    "ViewTypeMusicFavoriteAlbums": "Kedvenc Albumok",
+    "ViewTypeMusicFavoriteArtists": "Kedvenc M\u0171v\u00e9szek",
+    "ViewTypeMusicFavoriteSongs": "Kedvenc Dalok",
     "ViewTypeFolders": "Folders",
     "ViewTypeLiveTvRecordingGroups": "Recordings",
     "ViewTypeLiveTvChannels": "Channels",
     "ScheduledTaskFailedWithName": "{0} failed",
     "LabelRunningTimeValue": "Running time: {0}",
-    "ScheduledTaskStartedWithName": "{0} started",
-    "VersionNumber": "Version {0}",
-    "PluginInstalledWithName": "{0} was installed",
-    "PluginUpdatedWithName": "{0} was updated",
+    "ScheduledTaskStartedWithName": "{0} elkezdve",
+    "VersionNumber": "Verzi\u00f3 {0}",
+    "PluginInstalledWithName": "{0} telep\u00edtve",
+    "PluginUpdatedWithName": "{0} friss\u00edtve",
     "PluginUninstalledWithName": "{0} was uninstalled",
-    "ItemAddedWithName": "{0} was added to the library",
-    "ItemRemovedWithName": "{0} was removed from the library",
+    "ItemAddedWithName": "{0} k\u00f6nyvt\u00e1rhoz adva",
+    "ItemRemovedWithName": "{0} t\u00f6r\u00f6lve a k\u00f6nyvt\u00e1rb\u00f3l",
     "LabelIpAddressValue": "Ip address: {0}",
-    "DeviceOnlineWithName": "{0} is connected",
+    "DeviceOnlineWithName": "{0} kapcsol\u00f3dva",
     "UserOnlineFromDevice": "{0} is online from {1}",
     "ProviderValue": "Provider: {0}",
     "SubtitlesDownloadedForItem": "Subtitles downloaded for {0}",
@@ -114,7 +114,7 @@
     "MessageApplicationUpdated": "Emby Server has been updated",
     "FailedLoginAttemptWithUserName": "Failed login attempt from {0}",
     "AuthenticationSucceededWithUserName": "{0} successfully authenticated",
-    "DeviceOfflineWithName": "{0} has disconnected",
+    "DeviceOfflineWithName": "{0} sz\u00e9tkapcsolt",
     "UserLockedOutWithName": "User {0} has been locked out",
     "UserOfflineFromDevice": "{0} has disconnected from {1}",
     "UserStartedPlayingItemWithValues": "{0} has started playing {1}",
@@ -131,7 +131,7 @@
     "HeaderSeverity": "Severity",
     "HeaderUser": "User",
     "HeaderName": "Name",
-    "HeaderDate": "Date",
+    "HeaderDate": "D\u00e1tum",
     "HeaderPremiereDate": "Premiere Date",
     "HeaderDateAdded": "Date Added",
     "HeaderReleaseDate": "Release date",
