--- a/MediaBrowser.Server.Implementations/Localization/Core/id.json
+++ b/MediaBrowser.Server.Implementations/Localization/Core/id.json
@@ -11,7 +11,7 @@
     "FolderTypeGames": "Games",
     "FolderTypeBooks": "Books",
     "FolderTypeTvShows": "TV",
-    "FolderTypeInherit": "Inherit",
+    "FolderTypeInherit": "Mewarisi",
     "HeaderCastCrew": "Cast & Crew",
     "HeaderPeople": "People",
     "ValueSpecialEpisodeName": "Special - {0}",
