--- a/MediaBrowser.Server.Implementations/Localization/Core/ca.json
+++ b/MediaBrowser.Server.Implementations/Localization/Core/ca.json
@@ -154,7 +154,7 @@
     "HeaderDisc": "Disc",
     "HeaderTrack": "Track",
     "HeaderAudio": "\u00c0udio",
-    "HeaderVideo": "Video",
+    "HeaderVideo": "V\u00eddeo",
     "HeaderEmbeddedImage": "Embedded image",
     "HeaderResolution": "Resolution",
     "HeaderSubtitles": "Subtitles",
